// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operation coverage > separates declared mutation gaps from unregistered introspected mutation roots 1`] = `
{
  "declaredGaps": [
    "appPurchaseOneTimeCreate",
    "appRevokeAccessScopes",
    "appSubscriptionCancel",
    "appSubscriptionCreate",
    "appSubscriptionLineItemUpdate",
    "appSubscriptionTrialExtend",
    "appUninstall",
    "appUsageRecordCreate",
    "bulkOperationCancel",
    "bulkOperationRunMutation",
    "bulkOperationRunQuery",
    "combinedListingUpdate",
    "companiesDelete",
    "companyAddressDelete",
    "companyAssignCustomerAsContact",
    "companyAssignMainContact",
    "companyContactAssignRole",
    "companyContactAssignRoles",
    "companyContactCreate",
    "companyContactDelete",
    "companyContactRemoveFromCompany",
    "companyContactRevokeRole",
    "companyContactRevokeRoles",
    "companyContactsDelete",
    "companyContactSendWelcomeEmail",
    "companyContactUpdate",
    "companyCreate",
    "companyDelete",
    "companyLocationAssignAddress",
    "companyLocationAssignRoles",
    "companyLocationAssignStaffMembers",
    "companyLocationCreate",
    "companyLocationDelete",
    "companyLocationRemoveStaffMembers",
    "companyLocationRevokeRoles",
    "companyLocationsDelete",
    "companyLocationTaxSettingsUpdate",
    "companyLocationUpdate",
    "companyRevokeMainContact",
    "companyUpdate",
    "consentPolicyUpdate",
    "customerPaymentMethodCreateFromDuplicationData",
    "customerPaymentMethodCreditCardCreate",
    "customerPaymentMethodCreditCardUpdate",
    "customerPaymentMethodGetDuplicationData",
    "customerPaymentMethodGetUpdateUrl",
    "customerPaymentMethodPaypalBillingAgreementCreate",
    "customerPaymentMethodPaypalBillingAgreementUpdate",
    "customerPaymentMethodRemoteCreate",
    "customerPaymentMethodRevoke",
    "delegateAccessTokenCreate",
    "delegateAccessTokenDestroy",
    "discountAutomaticAppCreate",
    "discountAutomaticAppUpdate",
    "discountAutomaticBulkDelete",
    "discountCodeAppCreate",
    "discountCodeAppUpdate",
    "discountCodeBulkActivate",
    "discountCodeBulkDeactivate",
    "discountCodeBulkDelete",
    "discountCodeRedeemCodeBulkDelete",
    "discountRedeemCodeBulkAdd",
    "eventBridgeServerPixelUpdate",
    "fileAcknowledgeUpdateFailed",
    "fulfillmentOrderClose",
    "fulfillmentOrderLineItemsPreparedForPickup",
    "fulfillmentOrderMerge",
    "fulfillmentOrderReschedule",
    "fulfillmentOrderSplit",
    "fulfillmentOrdersSetFulfillmentDeadline",
    "marketingActivityCreate",
    "marketingActivityUpdate",
    "menuCreate",
    "menuDelete",
    "menuUpdate",
    "metaobjectBulkDelete",
    "metaobjectCreate",
    "metaobjectDelete",
    "metaobjectUpdate",
    "metaobjectUpsert",
    "mobilePlatformApplicationCreate",
    "mobilePlatformApplicationDelete",
    "mobilePlatformApplicationUpdate",
    "orderEditAddShippingLine",
    "orderEditRemoveShippingLine",
    "orderEditUpdateShippingLine",
    "paymentReminderSend",
    "paymentTermsCreate",
    "paymentTermsDelete",
    "paymentTermsUpdate",
    "privacyFeaturesDisable",
    "productBundleCreate",
    "productBundleUpdate",
    "productFeedCreate",
    "productFeedDelete",
    "productFullSync",
    "productOptionsReorder",
    "pubSubServerPixelUpdate",
    "removeFromReturn",
    "returnProcess",
    "reverseDeliveryCreateWithShipping",
    "reverseDeliveryShippingUpdate",
    "reverseFulfillmentOrderDispose",
    "scriptTagCreate",
    "scriptTagDelete",
    "scriptTagUpdate",
    "serverPixelCreate",
    "serverPixelDelete",
    "shopifyPaymentsPayoutAlternateCurrencyCreate",
    "storefrontAccessTokenCreate",
    "storefrontAccessTokenDelete",
    "themeCreate",
    "themeDelete",
    "themeFilesCopy",
    "themeFilesDelete",
    "themeFilesUpsert",
    "themePublish",
    "themeUpdate",
    "webPixelCreate",
    "webPixelDelete",
    "webPixelUpdate",
    "webPresenceDelete",
  ],
  "unregistered": [
    "backupRegionUpdate",
    "bulkProductResourceFeedbackCreate",
    "cartTransformCreate",
    "cartTransformDelete",
    "collectionAddProductsV2",
    "customerCancelDataErasure",
    "customerRequestDataErasure",
    "deliveryCustomizationActivation",
    "deliveryCustomizationCreate",
    "deliveryCustomizationDelete",
    "deliveryCustomizationUpdate",
    "deliveryPromiseParticipantsUpdate",
    "deliveryPromiseProviderUpsert",
    "deliverySettingUpdate",
    "disputeEvidenceUpdate",
    "draftOrderBulkAddTags",
    "draftOrderBulkDelete",
    "draftOrderBulkRemoveTags",
    "draftOrderCalculate",
    "draftOrderInvoicePreview",
    "flowGenerateSignature",
    "flowTriggerReceive",
    "fulfillmentConstraintRuleCreate",
    "fulfillmentConstraintRuleDelete",
    "fulfillmentConstraintRuleUpdate",
    "giftCardCreate",
    "giftCardCredit",
    "giftCardDeactivate",
    "giftCardDebit",
    "giftCardSendNotificationToCustomer",
    "giftCardSendNotificationToRecipient",
    "giftCardUpdate",
    "inventoryShipmentAddItems",
    "inventoryShipmentCreate",
    "inventoryShipmentCreateInTransit",
    "inventoryShipmentDelete",
    "inventoryShipmentMarkInTransit",
    "inventoryShipmentReceive",
    "inventoryShipmentRemoveItems",
    "inventoryShipmentSetTracking",
    "inventoryShipmentUpdateItemQuantities",
    "inventoryTransferCancel",
    "inventoryTransferCreate",
    "inventoryTransferCreateAsReadyToShip",
    "inventoryTransferDelete",
    "inventoryTransferDuplicate",
    "inventoryTransferEdit",
    "inventoryTransferMarkAsReadyToShip",
    "inventoryTransferRemoveItems",
    "inventoryTransferSetItems",
    "locationLocalPickupDisable",
    "locationLocalPickupEnable",
    "orderDelete",
    "orderEditAddCustomItem",
    "orderEditAddLineItemDiscount",
    "orderEditRemoveDiscount",
    "orderEditUpdateDiscount",
    "orderRiskAssessmentCreate",
    "productJoinSellingPlanGroups",
    "productLeaveSellingPlanGroups",
    "productVariantAppendMedia",
    "productVariantDetachMedia",
    "productVariantJoinSellingPlanGroups",
    "productVariantLeaveSellingPlanGroups",
    "productVariantRelationshipBulkUpdate",
    "publicationCreate",
    "publicationDelete",
    "publicationUpdate",
    "quantityPricingByVariantUpdate",
    "quantityRulesAdd",
    "quantityRulesDelete",
    "returnApproveRequest",
    "returnDeclineRequest",
    "savedSearchCreate",
    "savedSearchDelete",
    "savedSearchUpdate",
    "sellingPlanGroupAddProducts",
    "sellingPlanGroupAddProductVariants",
    "sellingPlanGroupCreate",
    "sellingPlanGroupDelete",
    "sellingPlanGroupRemoveProducts",
    "sellingPlanGroupRemoveProductVariants",
    "sellingPlanGroupUpdate",
    "shippingPackageDelete",
    "shippingPackageMakeDefault",
    "shippingPackageUpdate",
    "shopLocaleDisable",
    "shopLocaleEnable",
    "shopLocaleUpdate",
    "shopResourceFeedbackCreate",
    "storeCreditAccountCredit",
    "storeCreditAccountDebit",
    "subscriptionBillingAttemptCreate",
    "subscriptionBillingCycleBulkCharge",
    "subscriptionBillingCycleBulkSearch",
    "subscriptionBillingCycleCharge",
    "subscriptionBillingCycleContractDraftCommit",
    "subscriptionBillingCycleContractDraftConcatenate",
    "subscriptionBillingCycleContractEdit",
    "subscriptionBillingCycleEditDelete",
    "subscriptionBillingCycleEditsDelete",
    "subscriptionBillingCycleScheduleEdit",
    "subscriptionBillingCycleSkip",
    "subscriptionBillingCycleUnskip",
    "subscriptionContractActivate",
    "subscriptionContractAtomicCreate",
    "subscriptionContractCancel",
    "subscriptionContractCreate",
    "subscriptionContractExpire",
    "subscriptionContractFail",
    "subscriptionContractPause",
    "subscriptionContractProductChange",
    "subscriptionContractSetNextBillingDate",
    "subscriptionContractUpdate",
    "subscriptionDraftCommit",
    "subscriptionDraftDiscountAdd",
    "subscriptionDraftDiscountCodeApply",
    "subscriptionDraftDiscountRemove",
    "subscriptionDraftDiscountUpdate",
    "subscriptionDraftFreeShippingDiscountAdd",
    "subscriptionDraftFreeShippingDiscountUpdate",
    "subscriptionDraftLineAdd",
    "subscriptionDraftLineRemove",
    "subscriptionDraftLineUpdate",
    "subscriptionDraftUpdate",
    "taxAppConfigure",
    "translationsRegister",
    "translationsRemove",
    "urlRedirectBulkDeleteAll",
    "urlRedirectBulkDeleteByIds",
    "urlRedirectBulkDeleteBySavedSearch",
    "urlRedirectBulkDeleteBySearch",
    "urlRedirectCreate",
    "urlRedirectDelete",
    "urlRedirectImportCreate",
    "urlRedirectImportSubmit",
    "urlRedirectUpdate",
    "validationCreate",
    "validationDelete",
    "validationUpdate",
  ],
}
`;

exports[`GraphQL operation coverage > snapshots introspected Admin GraphQL mutations that are not formally supported yet 1`] = `
[
  "appPurchaseOneTimeCreate",
  "appRevokeAccessScopes",
  "appSubscriptionCancel",
  "appSubscriptionCreate",
  "appSubscriptionLineItemUpdate",
  "appSubscriptionTrialExtend",
  "appUninstall",
  "appUsageRecordCreate",
  "backupRegionUpdate",
  "bulkOperationCancel",
  "bulkOperationRunMutation",
  "bulkOperationRunQuery",
  "bulkProductResourceFeedbackCreate",
  "cartTransformCreate",
  "cartTransformDelete",
  "collectionAddProductsV2",
  "combinedListingUpdate",
  "companiesDelete",
  "companyAddressDelete",
  "companyAssignCustomerAsContact",
  "companyAssignMainContact",
  "companyContactAssignRole",
  "companyContactAssignRoles",
  "companyContactCreate",
  "companyContactDelete",
  "companyContactRemoveFromCompany",
  "companyContactRevokeRole",
  "companyContactRevokeRoles",
  "companyContactsDelete",
  "companyContactSendWelcomeEmail",
  "companyContactUpdate",
  "companyCreate",
  "companyDelete",
  "companyLocationAssignAddress",
  "companyLocationAssignRoles",
  "companyLocationAssignStaffMembers",
  "companyLocationCreate",
  "companyLocationDelete",
  "companyLocationRemoveStaffMembers",
  "companyLocationRevokeRoles",
  "companyLocationsDelete",
  "companyLocationTaxSettingsUpdate",
  "companyLocationUpdate",
  "companyRevokeMainContact",
  "companyUpdate",
  "consentPolicyUpdate",
  "customerCancelDataErasure",
  "customerPaymentMethodCreateFromDuplicationData",
  "customerPaymentMethodCreditCardCreate",
  "customerPaymentMethodCreditCardUpdate",
  "customerPaymentMethodGetDuplicationData",
  "customerPaymentMethodGetUpdateUrl",
  "customerPaymentMethodPaypalBillingAgreementCreate",
  "customerPaymentMethodPaypalBillingAgreementUpdate",
  "customerPaymentMethodRemoteCreate",
  "customerPaymentMethodRevoke",
  "customerRequestDataErasure",
  "delegateAccessTokenCreate",
  "delegateAccessTokenDestroy",
  "deliveryCustomizationActivation",
  "deliveryCustomizationCreate",
  "deliveryCustomizationDelete",
  "deliveryCustomizationUpdate",
  "deliveryPromiseParticipantsUpdate",
  "deliveryPromiseProviderUpsert",
  "deliverySettingUpdate",
  "discountAutomaticAppCreate",
  "discountAutomaticAppUpdate",
  "discountAutomaticBulkDelete",
  "discountCodeAppCreate",
  "discountCodeAppUpdate",
  "discountCodeBulkActivate",
  "discountCodeBulkDeactivate",
  "discountCodeBulkDelete",
  "discountCodeRedeemCodeBulkDelete",
  "discountRedeemCodeBulkAdd",
  "disputeEvidenceUpdate",
  "draftOrderBulkAddTags",
  "draftOrderBulkDelete",
  "draftOrderBulkRemoveTags",
  "draftOrderCalculate",
  "draftOrderInvoicePreview",
  "eventBridgeServerPixelUpdate",
  "fileAcknowledgeUpdateFailed",
  "flowGenerateSignature",
  "flowTriggerReceive",
  "fulfillmentConstraintRuleCreate",
  "fulfillmentConstraintRuleDelete",
  "fulfillmentConstraintRuleUpdate",
  "fulfillmentOrderClose",
  "fulfillmentOrderLineItemsPreparedForPickup",
  "fulfillmentOrderMerge",
  "fulfillmentOrderReschedule",
  "fulfillmentOrderSplit",
  "fulfillmentOrdersSetFulfillmentDeadline",
  "giftCardCreate",
  "giftCardCredit",
  "giftCardDeactivate",
  "giftCardDebit",
  "giftCardSendNotificationToCustomer",
  "giftCardSendNotificationToRecipient",
  "giftCardUpdate",
  "inventoryShipmentAddItems",
  "inventoryShipmentCreate",
  "inventoryShipmentCreateInTransit",
  "inventoryShipmentDelete",
  "inventoryShipmentMarkInTransit",
  "inventoryShipmentReceive",
  "inventoryShipmentRemoveItems",
  "inventoryShipmentSetTracking",
  "inventoryShipmentUpdateItemQuantities",
  "inventoryTransferCancel",
  "inventoryTransferCreate",
  "inventoryTransferCreateAsReadyToShip",
  "inventoryTransferDelete",
  "inventoryTransferDuplicate",
  "inventoryTransferEdit",
  "inventoryTransferMarkAsReadyToShip",
  "inventoryTransferRemoveItems",
  "inventoryTransferSetItems",
  "locationLocalPickupDisable",
  "locationLocalPickupEnable",
  "marketingActivityCreate",
  "marketingActivityUpdate",
  "menuCreate",
  "menuDelete",
  "menuUpdate",
  "metaobjectBulkDelete",
  "metaobjectCreate",
  "metaobjectDelete",
  "metaobjectUpdate",
  "metaobjectUpsert",
  "mobilePlatformApplicationCreate",
  "mobilePlatformApplicationDelete",
  "mobilePlatformApplicationUpdate",
  "orderDelete",
  "orderEditAddCustomItem",
  "orderEditAddLineItemDiscount",
  "orderEditAddShippingLine",
  "orderEditRemoveDiscount",
  "orderEditRemoveShippingLine",
  "orderEditUpdateDiscount",
  "orderEditUpdateShippingLine",
  "orderRiskAssessmentCreate",
  "paymentReminderSend",
  "paymentTermsCreate",
  "paymentTermsDelete",
  "paymentTermsUpdate",
  "privacyFeaturesDisable",
  "productBundleCreate",
  "productBundleUpdate",
  "productFeedCreate",
  "productFeedDelete",
  "productFullSync",
  "productJoinSellingPlanGroups",
  "productLeaveSellingPlanGroups",
  "productOptionsReorder",
  "productVariantAppendMedia",
  "productVariantDetachMedia",
  "productVariantJoinSellingPlanGroups",
  "productVariantLeaveSellingPlanGroups",
  "productVariantRelationshipBulkUpdate",
  "publicationCreate",
  "publicationDelete",
  "publicationUpdate",
  "pubSubServerPixelUpdate",
  "quantityPricingByVariantUpdate",
  "quantityRulesAdd",
  "quantityRulesDelete",
  "removeFromReturn",
  "returnApproveRequest",
  "returnDeclineRequest",
  "returnProcess",
  "reverseDeliveryCreateWithShipping",
  "reverseDeliveryShippingUpdate",
  "reverseFulfillmentOrderDispose",
  "savedSearchCreate",
  "savedSearchDelete",
  "savedSearchUpdate",
  "scriptTagCreate",
  "scriptTagDelete",
  "scriptTagUpdate",
  "sellingPlanGroupAddProducts",
  "sellingPlanGroupAddProductVariants",
  "sellingPlanGroupCreate",
  "sellingPlanGroupDelete",
  "sellingPlanGroupRemoveProducts",
  "sellingPlanGroupRemoveProductVariants",
  "sellingPlanGroupUpdate",
  "serverPixelCreate",
  "serverPixelDelete",
  "shippingPackageDelete",
  "shippingPackageMakeDefault",
  "shippingPackageUpdate",
  "shopifyPaymentsPayoutAlternateCurrencyCreate",
  "shopLocaleDisable",
  "shopLocaleEnable",
  "shopLocaleUpdate",
  "shopResourceFeedbackCreate",
  "storeCreditAccountCredit",
  "storeCreditAccountDebit",
  "storefrontAccessTokenCreate",
  "storefrontAccessTokenDelete",
  "subscriptionBillingAttemptCreate",
  "subscriptionBillingCycleBulkCharge",
  "subscriptionBillingCycleBulkSearch",
  "subscriptionBillingCycleCharge",
  "subscriptionBillingCycleContractDraftCommit",
  "subscriptionBillingCycleContractDraftConcatenate",
  "subscriptionBillingCycleContractEdit",
  "subscriptionBillingCycleEditDelete",
  "subscriptionBillingCycleEditsDelete",
  "subscriptionBillingCycleScheduleEdit",
  "subscriptionBillingCycleSkip",
  "subscriptionBillingCycleUnskip",
  "subscriptionContractActivate",
  "subscriptionContractAtomicCreate",
  "subscriptionContractCancel",
  "subscriptionContractCreate",
  "subscriptionContractExpire",
  "subscriptionContractFail",
  "subscriptionContractPause",
  "subscriptionContractProductChange",
  "subscriptionContractSetNextBillingDate",
  "subscriptionContractUpdate",
  "subscriptionDraftCommit",
  "subscriptionDraftDiscountAdd",
  "subscriptionDraftDiscountCodeApply",
  "subscriptionDraftDiscountRemove",
  "subscriptionDraftDiscountUpdate",
  "subscriptionDraftFreeShippingDiscountAdd",
  "subscriptionDraftFreeShippingDiscountUpdate",
  "subscriptionDraftLineAdd",
  "subscriptionDraftLineRemove",
  "subscriptionDraftLineUpdate",
  "subscriptionDraftUpdate",
  "taxAppConfigure",
  "themeCreate",
  "themeDelete",
  "themeFilesCopy",
  "themeFilesDelete",
  "themeFilesUpsert",
  "themePublish",
  "themeUpdate",
  "translationsRegister",
  "translationsRemove",
  "urlRedirectBulkDeleteAll",
  "urlRedirectBulkDeleteByIds",
  "urlRedirectBulkDeleteBySavedSearch",
  "urlRedirectBulkDeleteBySearch",
  "urlRedirectCreate",
  "urlRedirectDelete",
  "urlRedirectImportCreate",
  "urlRedirectImportSubmit",
  "urlRedirectUpdate",
  "validationCreate",
  "validationDelete",
  "validationUpdate",
  "webPixelCreate",
  "webPixelDelete",
  "webPixelUpdate",
  "webPresenceDelete",
]
`;
